# FOGGs-2D-Project

./: CMakeLists.txt  README.md
Pacman/: Pacman.cpp  Pacman.h  Pacman.vcxproj  Pacman.vcxproj.filters  TankGame.cpp  TankGame.h  main.cpp
Pacman/Debug/: Pacman.exe.recipe  Pacman.ilk  TankGame.exe.recipe  TankGame.ilk  main.obj.enc  tankgame.obj.enc  vc143.idb
Pacman/Debug/Pacman.tlog/: CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.write.1.tlog
Pacman/Debug/TankGame.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  TankGame.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Pacman/Sounds/: Credits.txt
Pacman/Textures/: Ammo1.tga  Ammo2.tga
TankGame/: TankGame.cpp  TankGame.h
TankGame/Debug/: Pacman.ilk
TankGame/Debug/Pacman.tlog/: CL.command.1.tlog  link.read.1.tlog
